flask-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-deployment
  namespace: flask
spec:
  replicas: 2
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: flask
  template:
    metadata:
      labels:
        app: flask
    spec:
      containers:
        - name: flask
          image: maksimkaaa/flask:latest
          ports:
            - containerPort: 5000
