flask-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-service
  namespace: flask
spec:
  selector:
    app: flask-service
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
  type: ClusterIP
